# ds-entities-service

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  asgi.py  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/docker_init/: create_x509_user.js  setup_mongo_security.sh
.github/utils/: coverage_entrypoint.sh  docker_test.py  requirements.txt  requirements_docker_test.txt  run_with_coverage.py
.github/workflows/: cd_onto-ns.yml  cd_release.yml  ci_automerge.yml  ci_automerge_dependencies.yml  ci_cd_updated_main.yml  ci_check_dependencies.yml  ci_generate_openapi_doc.yml  ci_tests.yml  ci_update_dependencies.yml  ci_update_docker_reqs.yml
dataspaces_entities/: __init__.py  config.py  exception_handlers.py  exceptions.py  logger.py  logging.py  main.py  requests.py  utils.py  uvicorn.py
dataspaces_entities/backend/: __init__.py  backend.py  mongodb.py
dataspaces_entities/models/: __init__.py  errors.py  service_errors.py
dataspaces_entities/routers/: entities.py
dlite_entities_service/: __init__.py  backend.py  config.py  logger.py  main.py  models.py  uvicorn.py
dlite_entities_service/cli/: __init__.py  config.py  main.py
dlite_entities_service/cli/_utils/: generics.py  global_settings.py
dlite_entities_service/models/: __init__.py  soft5.py  soft7.py
dlite_entities_service/service/: backend.py  config.py  exceptions.py  logger.py
docker/: .pre-commit-config_docker.yaml  Dockerfile  compose.yml  docker-compose.yml  pyproject_requirements.txt  requirements.txt  requirements_development.txt
docker/docker_init/: create_users.js  create_x509_user.js  setup_mongo_security.sh
docs/example/: dlite_example.ipynb  dlite_example.py
ds_entities_service/: __init__.py  config.py  logger.py  main.py
ds_entities_service/backend/: __init__.py  backend.py  mongodb.py
ds_entities_service/routers/: entities.py
entities_service/: __init__.py  config.py  logger.py  main.py  uvicorn.py
entities_service/backend/: __init__.py  mongodb.py
entities_service/cli/: __init__.py  config.py  main.py
entities_service/cli/_utils/: generics.py  global_settings.py
entities_service/models/: __init__.py  auth.py  soft5.py  soft7.py
entities_service/routers/: __init__.py  entities.py
entities_service/service/: backend.py  config.py  logger.py  requests.py  security.py  utils.py
entities_service/service/backend/: __init__.py  backend.py  mongodb.py
entities_service/service/routers/: __init__.py  admin.py  entities.py
tests/: conftest.py  test_main.py  test_route.py  utils.py
tests/backend/: test_mongodb.py
tests/cli/: conftest.py  test_config.py  test_login.py  test_upload.py
tests/cli/_utils/: test_global_settings.py
tests/models/: test_init.py
tests/routers/: conftest.py  test_entities_get.py  test_entities_post.py
tests/service/backend/: test_mongodb.py
tests/service/routers/: conftest.py  test_admin.py  test_entities_get.py  test_entities_post.py
tests/static/: README.md  entities.yaml  valid_entities.yaml  valid_entities_soft7.yaml
tests/static/invalid_entities/: Cat.json  Cat5.json  Dog.json  Dog5.json  Person.json  Person5.json  README.md
tests/static/valid_entities/: Cat.json  Dog.json  Person.json  PersonWithDog.json  README.md
